@@ -39,6 +39,12 @@ v2.4.0 (XXXX-XX-XX)
 v2.3.2 (XXXX-XX-XX)
 -------------------
 
+* fixed issue #1173: AQL Editor "Save current query" resets user password
+
+* fixed missing makeDirectory when fetching a Foxx application from a zip file
+
+* put in warning about default changed: fixed issue #1134: Change the default endpoint to localhost
+
 * fixed issue #1163: invalid fullCount value returned from AQL
 
 * fixed range operator precedence 
@@ -55,6 +61,8 @@ v2.3.2 (XXXX-XX-XX)
 * fixed segfault in AQL query hash index setup with unknown shapes
 
 * fixed memleaks
+
+* added AQL optimizer rule for removing `INTO` from a `COLLECT` statement if not needed
 
 * fixed issue #1131
 
